unpackaged/main/default/objects/Account/fields/IsParentEnerjyhubExpired__c.field-meta.xml
<CustomField>
    <fullName>IsParentEnerjyhubExpired__c</fullName>
    <formula>Parent.IsEnerjyhubExpired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Enerjyhub Expired?</label>
    <type>Checkbox</type>
</CustomField>