unpackaged/main/default/objects/Account/fields/IsSHCEmailSentToRFQTrig__c.field-meta.xml
<CustomField>
    <fullName>IsSHCEmailSentToRFQTrig__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to show that the SHC Email has been sent to the RFQ Bid Manager</description>
    <label>IsSHCEmailSentToRFQTrig</label>
    <type>Checkbox</type>
</CustomField>