unpackaged/main/default/objects/Account/fields/IsShowExpiryBanner__c.field-meta.xml
<CustomField>
    <fullName>IsShowExpiryBanner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsShowExpiryBanner</label>
    <type>Checkbox</type>
</CustomField>