unpackaged/main/default/objects/Account/fields/IT_Manager__c.field-meta.xml
<CustomField>
    <fullName>IT_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (IT Manager)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>