unpackaged/main/default/objects/Account/fields/ITPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>ITPrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT (Division) Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (IT Primary Contact)</relationshipLabel>
    <relationshipName>ITPrimaryContactAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>