unpackaged/main/default/objects/Account/fields/ITPrimaryContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ITPrimaryContactEmail__c</fullName>
    <formula>ITPrimaryContact__r.Email</formula>
    <label>IT Primary Contact Email</label>
    <type>Text</type>
</CustomField>