unpackaged/main/default/objects/Account/fields/ITPrimaryContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ITPrimaryContactFirstName__c</fullName>
    <formula>ITPrimaryContact__r.FirstName</formula>
    <label>IT (Division) Primary Contact First Name</label>
    <type>Text</type>
</CustomField>