unpackaged/main/default/objects/Account/fields/ITPrimaryContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ITPrimaryContactPhone__c</fullName>
    <formula>ITPrimaryContact__r.Phone</formula>
    <label>IT Primary Contact Phone</label>
    <type>Text</type>
</CustomField>