unpackaged/main/default/objects/Account/fields/JLR_GSDB__c.field-meta.xml
<CustomField>
    <fullName>JLR_GSDB__c</fullName>
    <externalId>true</externalId>
    <label>JLR GSDB</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>