unpackaged/main/default/objects/Account/fields/JLR_Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>JLR_Parent_Code__c</fullName>
    <label>JLR Parent Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>