unpackaged/main/default/objects/Account/fields/JLR_SupplierRating__c.field-meta.xml
<CustomField>
    <fullName>JLR_SupplierRating__c</fullName>
    <label>Supplier Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>