unpackaged/main/default/objects/Account/fields/JLRPriorityPick__c.field-meta.xml
<CustomField>
    <fullName>JLRPriorityPick__c</fullName>
    <description>Determine which sites JLR have prioritised with GSI.</description>
    <inlineHelpText>Supplier priority onboarding level determined by JLR.</inlineHelpText>
    <label>JLR Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority A</fullName>
            </value>
            <value>
                <fullName>Priority B</fullName>
            </value>
            <value>
                <fullName>Priority C</fullName>
            </value>
            <value>
                <fullName>Priority D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>