unpackaged/main/default/objects/Account/fields/JLRSupplierPriorityPick__c.field-meta.xml
<CustomField>
    <fullName>JLRSupplierPriorityPick__c</fullName>
    <label>JLR Supplier Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1*</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>*</fullName>
                <isActive>false</isActive>
                <label>*</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>