unpackaged/main/default/objects/Account/fields/Key_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Key Account Manager)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>