unpackaged/main/default/objects/Account/fields/L663_Status__c.field-meta.xml
<CustomField>
    <fullName>L663_Status__c</fullName>
    <label>L663 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L663 - Sourced</fullName>
            </value>
            <value>
                <fullName>L663 - Bidding</fullName>
            </value>
            <value>
                <fullName>L663 - Not Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>