unpackaged/main/default/objects/Account/fields/Last_Pre_Tax_Profit__c.field-meta.xml
<CustomField>
    <fullName>Last_Pre_Tax_Profit__c</fullName>
    <label>Last Pre-Tax Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>