unpackaged/main/default/objects/Account/fields/LastOpportunityCloseDate__c.field-meta.xml
<CustomField>
    <fullName>LastOpportunityCloseDate__c</fullName>
    <label>Last Opportunity Close Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>