unpackaged/main/default/objects/Account/fields/Lease_5_year_repayment__c.field-meta.xml
<CustomField>
    <fullName>Lease_5_year_repayment__c</fullName>
    <label>Lease 5 Year Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>