unpackaged/main/default/objects/Account/fields/LinkedInFollowers__c.field-meta.xml
<CustomField>
    <fullName>LinkedInFollowers__c</fullName>
    <label>LinkedIn Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>