unpackaged/main/default/objects/Account/fields/Logistics_Manager__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistics Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Logistics Manager)</relationshipLabel>
    <relationshipName>AccountswgKi</relationshipName>
    <type>Lookup</type>
</CustomField>