unpackaged/main/default/objects/Account/fields/Maintenance_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Revenue__c</fullName>
    <label>Maintenance Revenue</label>
    <summarizedField>Opportunity.MaintenanceRevenue__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>