unpackaged/main/default/objects/Account/fields/ManufactureLocation__c.field-meta.xml
<CustomField>
    <fullName>ManufactureLocation__c</fullName>
    <inlineHelpText>Does the company have a manufacturing facility in the UK?</inlineHelpText>
    <label>Manufactures in the UK</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Manufacturer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>