unpackaged/main/default/objects/Account/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this business manufacture a product?</inlineHelpText>
    <label>Manufacturer</label>
    <type>Checkbox</type>
</CustomField>