unpackaged/main/default/objects/Account/fields/Manufacturing_Director__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Manufacturing Director)</relationshipLabel>
    <relationshipName>AccountswgLW</relationshipName>
    <type>Lookup</type>
</CustomField>