unpackaged/main/default/objects/Account/fields/Maximum_number_of_MX_accounts__c.field-meta.xml
<CustomField>
    <fullName>Maximum_number_of_MX_accounts__c</fullName>
    <defaultValue>10</defaultValue>
    <description>This field shows the maximum number of MX accounts per site.</description>
    <label>Maximum number of MX accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>