unpackaged/main/default/objects/Account/fields/Maximum_number_of_sites__c.field-meta.xml
<CustomField>
    <fullName>Maximum_number_of_sites__c</fullName>
    <description>This field needs to be populated by the user to say what the maximum number of allowed sites is for that specific account according to their purchased subscription.</description>
    <label>Maximum number of sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>