unpackaged/main/default/objects/Account/fields/MD1_MD2_HD2_Seats__c.field-meta.xml
<CustomField>
    <fullName>MD1_MD2_HD2_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MD1/MD2/HD2 Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>