unpackaged/main/default/objects/Account/fields/MLA_High_Status__c.field-meta.xml
<CustomField>
    <fullName>MLA_High_Status__c</fullName>
    <label>MLA-High Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLA-High - Sourced</fullName>
            </value>
            <value>
                <fullName>MLA-High - Bidding</fullName>
            </value>
            <value>
                <fullName>MLA-High - Not Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>