unpackaged/main/default/objects/Account/fields/MLA_Number__c.field-meta.xml
<CustomField>
    <fullName>MLA_Number__c</fullName>
    <label>MLA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>