unpackaged/main/default/objects/Account/fields/MLALow_Status__c.field-meta.xml
<CustomField>
    <fullName>MLALow_Status__c</fullName>
    <label>MLA-Low Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLA-Low - Sourced</fullName>
            </value>
            <value>
                <fullName>MLA-Low - Bidding</fullName>
            </value>
            <value>
                <fullName>MLA-Low - Not Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>