unpackaged/main/default/objects/Account/fields/MX_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>MX_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MX Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (MX Primary Contact)</relationshipLabel>
    <relationshipName>MXPrimaryContactAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>