unpackaged/main/default/objects/Account/fields/MXClientID__c.field-meta.xml
<CustomField>
    <fullName>MXClientID__c</fullName>
    <label>MX Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>