unpackaged/main/default/objects/Account/fields/MXOEM__c.field-meta.xml
<CustomField>
    <fullName>MXOEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MX OEM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MX Suppliers</relationshipLabel>
    <relationshipName>MXSuppliers</relationshipName>
    <type>Lookup</type>
</CustomField>