unpackaged/main/default/objects/Account/fields/MXParentClientID__c.field-meta.xml
<CustomField>
    <fullName>MXParentClientID__c</fullName>
    <label>MX Parent Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>