unpackaged/main/default/objects/Account/fields/NameOfCurrentSolution__c.field-meta.xml
<CustomField>
    <fullName>NameOfCurrentSolution__c</fullName>
    <description>Requested by Simon Ordish (005288/0421)</description>
    <label>Name of Current Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>