unpackaged/main/default/objects/Account/fields/NDAExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>NDAExpiryDate__c</fullName>
    <label>NDA Expiry Date</label>
    <type>Date</type>
</CustomField>