unpackaged/main/default/objects/Account/fields/New_Parts_Progressing_Manager__c.field-meta.xml
<CustomField>
    <fullName>New_Parts_Progressing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Parts Progressing Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (New Parts Progressing Manager)</relationshipLabel>
    <relationshipName>AccountswgLg</relationshipName>
    <type>Lookup</type>
</CustomField>