unpackaged/main/default/objects/Account/fields/NissanVendorCode__c.field-meta.xml
<CustomField>
    <fullName>NissanVendorCode__c</fullName>
    <externalId>true</externalId>
    <label>Nissan Vendor Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>