unpackaged/main/default/objects/Account/fields/No_of_Users_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>No_of_Users_Logged_In__c</fullName>
    <description>Shows number of users logged into enerjyhub.</description>
    <inlineHelpText>Number of active users who have logged into enerjyhub.</inlineHelpText>
    <label>No of Users Logged In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>