unpackaged/main/default/objects/Account/fields/NominatedDassaultVAR__c.field-meta.xml
<CustomField>
    <fullName>NominatedDassaultVAR__c</fullName>
    <label>Nominated Dassault VAR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Majenta</fullName>
            </value>
            <value>
                <fullName>Desktop Engineering</fullName>
            </value>
            <value>
                <fullName>Applied CAE</fullName>
            </value>
            <value>
                <fullName>Cenit</fullName>
            </value>
            <value>
                <fullName>Dassault Direct</fullName>
            </value>
            <value>
                <fullName>TATA Technologies</fullName>
            </value>
            <value>
                <fullName>Intrinsys</fullName>
            </value>
            <value>
                <fullName>Design Rule</fullName>
            </value>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>Other UK Based VAR</fullName>
            </value>
            <value>
                <fullName>Other Non UK Based VAR</fullName>
            </value>
            <value>
                <fullName>Technia</fullName>
            </value>
            <value>
                <fullName>White Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>