unpackaged/main/default/objects/Account/fields/NoofActiveUsers__c.field-meta.xml
<CustomField>
    <fullName>NoofActiveUsers__c</fullName>
    <description>No of active JLR users against the site account.</description>
    <inlineHelpText>No of active JLR users against the site account.</inlineHelpText>
    <label>No of Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>