unpackaged/main/default/objects/Account/fields/Number_of_Global_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Global_Sites__c</fullName>
    <label>Number of Global Sites</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>