unpackaged/main/default/objects/Account/fields/NumberOfDesigners__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDesigners__c</fullName>
    <label>Number of Designers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>