unpackaged/main/default/objects/Account/fields/NumberOfEngineers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEngineers__c</fullName>
    <label>Number of Engineers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>