unpackaged/main/default/objects/Account/fields/NumImportedChildSites__c.field-meta.xml
<CustomField>
    <fullName>NumImportedChildSites__c</fullName>
    <label>JLR Child Sites</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>