unpackaged/main/default/objects/Account/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this business an OEM (Original Equipment Manufacturer)?</inlineHelpText>
    <label>OEM</label>
    <type>Checkbox</type>
</CustomField>