unpackaged/main/default/objects/Account/fields/OEMs_Supplied__c.field-meta.xml
<CustomField>
    <fullName>OEMs_Supplied__c</fullName>
    <label>OEMs Supplied</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace - Airbus</fullName>
            </value>
            <value>
                <fullName>Aerospace - BAE Systems</fullName>
            </value>
            <value>
                <fullName>Aerospace - Boeing</fullName>
            </value>
            <value>
                <fullName>Aerospace - Bombardier</fullName>
            </value>
            <value>
                <fullName>Aerospace - General Electric</fullName>
            </value>
            <value>
                <fullName>Aerospace - Honeywell</fullName>
            </value>
            <value>
                <fullName>Aerospace - Lockheed</fullName>
            </value>
            <value>
                <fullName>Aerospace - Rolls-Royce</fullName>
            </value>
            <value>
                <fullName>Aerospace - SAFRAN</fullName>
            </value>
            <value>
                <fullName>Automotive - Audi</fullName>
            </value>
            <value>
                <fullName>Automotive - Bentley</fullName>
            </value>
            <value>
                <fullName>Automotive - BMW</fullName>
            </value>
            <value>
                <fullName>Automotive - Fiat</fullName>
            </value>
            <value>
                <fullName>Automotive - Ford</fullName>
            </value>
            <value>
                <fullName>Automotive - Honda</fullName>
            </value>
            <value>
                <fullName>Automotive - Hyundai</fullName>
            </value>
            <value>
                <fullName>Automotive - JLR</fullName>
            </value>
            <value>
                <fullName>Automotive - Kia</fullName>
            </value>
            <value>
                <fullName>Automotive - Nissan</fullName>
            </value>
            <value>
                <fullName>Automotive - Renault</fullName>
            </value>
            <value>
                <fullName>Automotive - Rolls-Royce</fullName>
            </value>
            <value>
                <fullName>Automotive - SAIC Motors</fullName>
            </value>
            <value>
                <fullName>Automotive - SEAT</fullName>
            </value>
            <value>
                <fullName>Automotive - Škoda</fullName>
            </value>
            <value>
                <fullName>Automotive - Suzuki</fullName>
            </value>
            <value>
                <fullName>Automotive - Toyota</fullName>
            </value>
            <value>
                <fullName>Automotive - Vauxhall</fullName>
            </value>
            <value>
                <fullName>Automotive - Volkswagen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>