unpackaged/main/default/objects/Account/fields/On_Hold_Notify__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send an email to selected contacts about support on hold.</inlineHelpText>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>