unpackaged/main/default/objects/Account/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <inlineHelpText>Please include an invoice number and breif description of why the account has had support put on hold.</inlineHelpText>
    <label>Reason for Support on Hold</label>
    <type>TextArea</type>
</CustomField>