unpackaged/main/default/objects/Account/fields/Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities__c</fullName>
    <label>Open Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Probability</field>
        <operation>lessThan</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Probability</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>