unpackaged/main/default/objects/Account/fields/OpenOppWithNominatedDassaultVAR__c.field-meta.xml
<CustomField>
    <fullName>OpenOppWithNominatedDassaultVAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account has an Open Opportunity with Nominated Dassault VAR - manually updated</description>
    <label>Open Opp with Nominated Dassault VAR</label>
    <type>Checkbox</type>
</CustomField>