unpackaged/main/default/objects/Account/fields/OtherNominatedDassaultVAR__c.field-meta.xml
<CustomField>
    <fullName>OtherNominatedDassaultVAR__c</fullName>
    <label>Other Nominated Dassault VAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>