unpackaged/main/default/objects/Account/fields/OtherSocialNetworks__c.field-meta.xml
<CustomField>
    <fullName>OtherSocialNetworks__c</fullName>
    <label>Other Social Networks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>