unpackaged/main/default/objects/Account/fields/OtherSystems__c.field-meta.xml
<CustomField>
    <fullName>OtherSystems__c</fullName>
    <inlineHelpText>For example, FEA, etc.</inlineHelpText>
    <label>Other Systems Used (FEA, etc,)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>