unpackaged/main/default/objects/Account/fields/OwnerManager__c.field-meta.xml
<CustomField>
    <fullName>OwnerManager__c</fullName>
    <formula>Owner.Manager.FirstName + " " + Owner.Manager.LastName</formula>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>