unpackaged/main/default/objects/Account/fields/Paid_subscription__c.field-meta.xml
<CustomField>
    <fullName>Paid_subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribed?</label>
    <type>Checkbox</type>
</CustomField>