unpackaged/main/default/objects/Account/fields/Parent_Account_Supplier_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Supplier_Account_Manager__c</fullName>
    <description>Parent Account Supplier Account Manager (SAM)</description>
    <formula>Parent.Supplier_Account_Manager__r.FirstName&amp; " " &amp; Parent.Supplier_Account_Manager__r.LastName</formula>
    <label>Parent Account Supplier Account Manager</label>
    <type>Text</type>
</CustomField>