unpackaged/main/default/objects/Account/fields/ParentAccountEscalationDateAuto__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountEscalationDateAuto__c</fullName>
    <formula>Parent.enerjyhubEscalationDateTrig__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Escalation Date</label>
    <type>Date</type>
</CustomField>