unpackaged/main/default/objects/Account/fields/Payment_due_date__c.field-meta.xml
<CustomField>
    <fullName>Payment_due_date__c</fullName>
    <description>Payment due date for subscription. By x date, the supplier should have paid for the subscription.</description>
    <label>Payment due date</label>
    <type>Date</type>
</CustomField>