unpackaged/main/default/objects/Account/fields/Payment_made__c.field-meta.xml
<CustomField>
    <fullName>Payment_made__c</fullName>
    <description>This field is populated by a member of Majenta to say that this account paid for their subscription and when it has been made.</description>
    <label>Payment made</label>
    <type>Date</type>
</CustomField>