unpackaged/main/default/objects/Account/fields/Plant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Plant_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Plant Manager)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>