unpackaged/main/default/objects/Account/fields/PO_needed__c.field-meta.xml
<CustomField>
    <fullName>PO_needed__c</fullName>
    <description>If yes, then the user needs to insert the PO number in a dedicated field so to prove that the supplier has setup Majenta as a supplier on their end.</description>
    <label>PO needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>