unpackaged/main/default/objects/Account/fields/PO_number__c.field-meta.xml
<CustomField>
    <fullName>PO_number__c</fullName>
    <description>This field is used to inform about the PO number to prove that Majenta is registered on supplier site.</description>
    <label>PO number</label>
    <length>125</length>
    <type>Text</type>
</CustomField>