unpackaged/main/default/objects/Account/fields/Powertrain__c.field-meta.xml
<CustomField>
    <fullName>Powertrain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Powertrain</label>
    <type>Checkbox</type>
</CustomField>